# vacancies_parser

./: .gitignore  README.md  main.py  pyproject.toml
src/: abstract_classes.py  hh_parser.py  json_saver.py  sj_parser.py  utils.py  vacancy.py
